--- a/src/html/layout/header.html
+++ b/src/html/layout/header.html
@@ -7,3 +7,16 @@
     <title>Document</title>
 </head>
 <body>
+    <nav>
+        <ul>
+            <li>
+                <a href="index.html">index</a>
+            </li>
+            <li>
+                <a href="lohee.html">lohee</a>
+            </li>
+            <li>
+                <a href="test.html">test</a>
+            </li>
+        </ul>
+    </nav>
